<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Ankit Ghate
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_login_fragment"
    android:contentDescription="root_login_fragment"
    android:background="@color/black_900"
    android:padding="@dimen/padding_24"
    tools:context=".ui.login.LoginFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/login_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login_animation" />

    <TextView
        android:id="@+id/login_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jostlight"
        android:justificationMode="inter_word"
        android:text="@string/login_body_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/size_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input_layout"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_16dp"
        android:hint="@string/hint_employeeid"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/login_password_inputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="login_email_ed"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusDown="@id/login_password_inputlayout"
            android:singleLine="true"
            android:textColor="@color/dark_default_color_on_surface"
            android:textCursorDrawable="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_inputlayout"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:hint="@string/password_text"
        android:nextFocusForward="@id/login_button_signin"
        android:textColorHint="@color/colorAccent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/login_button_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:contentDescription="login_password_ed"
            android:maxLines="1"
            android:nextFocusDown="@id/login_button_signin"
            android:singleLine="true"
            android:textColor="@color/dark_default_color_on_surface"
            android:textCursorDrawable="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button_signin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_40dp"
        android:contentDescription="login_sign_button"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/jostbold"
        android:text="@string/sign_in_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/size_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/ripple_background" />

    <Button
        android:id="@+id/login_button_register"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/jostbold"
        android:text="@string/login_button_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/size_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_button_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/ripple_background" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_button_signin"
        app:layout_constraintTop_toBottomOf="@id/login_password_inputlayout"
        app:layout_constraintVertical_bias="0.509" />

</androidx.constraintlayout.widget.ConstraintLayout>