...
    <string name="search">Search</string>
    <string name="empty"> </string>
    <string name="register_button_text">REGISTER</string>
    <string name="username_hint_text">Username</string>
    <string name="awhfragment_title_text">AWH Details</string>
    <string name="title_text_leavesfragment">Leaves</string>
    <string name="text_button_start">Start</string>
    <string name="login_button_text">REGISTER</string>
    <string name="authentication_failed_message">Authentication Failed. Please check your Credentials and login again</string>
    <string name="error_enter_valid_employeeid">Please enter a valid employeeID</string>
    <string name="error_enter_valid_username">Please enter a valid username</string>
    <string name="error_enter_valid_designation">Please enter a valid designation</string>
    <string name="error_enter_valid_email">Please enter a valid email</string>
...
